# binc

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  history.rs  main.rs  number.rs  operators.rs  syntax.rs
src/number/: mod.rs
src/operators/: mod.rs
src/syntax/: mod.rs
