[package]
name = "binc"
version = "0.1.0"
authors = ["artem <ayrapetovai@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bigdecimal = "0.2.0"
log = "0.4"
rustyline = "8.0.0"
stderrlog = "0.4"
